--- a/public/SignUp.html
+++ b/public/SignUp.html
@@ -4,62 +4,67 @@
     <title>Login V18</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!--===============================================================================================-->
+
     <link rel="icon" type="image/png" href="images/icons/favicon.ico" />
-    <!--===============================================================================================-->
+
     <link
       rel="stylesheet"
       type="text/css"
       href="vendor/bootstrap/css/bootstrap.min.css"
     />
-    <!--===============================================================================================-->
+
     <link
       rel="stylesheet"
       type="text/css"
       href="fonts/font-awesome-4.7.0/css/font-awesome.min.css"
     />
-    <!--===============================================================================================-->
+
     <link
       rel="stylesheet"
       type="text/css"
       href="fonts/Linearicons-Free-v1.0.0/icon-font.min.css"
     />
-    <!--===============================================================================================-->
+
     <link rel="stylesheet" type="text/css" href="vendor/animate/animate.css" />
-    <!--===============================================================================================-->
+
     <link
       rel="stylesheet"
       type="text/css"
       href="vendor/css-hamburgers/hamburgers.min.css"
     />
-    <!--===============================================================================================-->
+
     <link
       rel="stylesheet"
       type="text/css"
       href="vendor/animsition/css/animsition.min.css"
     />
-    <!--===============================================================================================-->
+
     <link
       rel="stylesheet"
       type="text/css"
       href="vendor/select2/select2.min.css"
     />
-    <!--===============================================================================================-->
+
     <link
       rel="stylesheet"
       type="text/css"
       href="vendor/daterangepicker/daterangepicker.css"
     />
-    <!--===============================================================================================-->
+
     <link rel="stylesheet" type="text/css" href="css/util.css" />
     <link rel="stylesheet" type="text/css" href="css/main.css" />
-    <!--===============================================================================================-->
   </head>
   <body style="background-color: #666666;">
     <div class="limiter">
       <div class="container-login100">
         <div class="wrap-login100">
-          <form enctype="application/x-www-form-urlencoded" class="login100-form validate-form" id="signUpForm">
+          <form
+            enctype="application/x-www-form-urlencoded"
+            class="login100-form validate-form"
+            id="signUpForm"
+            method="POST"
+            action="auth/register"
+          >
             <span class="login100-form-title p-b-43">
               Please fill in form
             </span>
@@ -141,7 +146,6 @@
       </div>
     </div>
 
-    
     <script src="vendor/jquery/jquery-3.2.1.min.js"></script>
     <!--===============================================================================================-->
     <script src="vendor/animsition/js/animsition.min.js"></script>
@@ -157,6 +161,5 @@
     <script src="vendor/countdowntime/countdowntime.js"></script>
     <!--===============================================================================================-->
     <script src="js/main.js"></script>
-    <script src="js/signUp.js"></script>
   </body>
 </html>
