save token to localStorage

--- a/public/SignIn.html
+++ b/public/SignIn.html
@@ -61,9 +61,6 @@
           <form
             class="login100-form validate-form"
             id="signInForm"
-            enctype="application/x-www-form-urlencoded"
-            method="POST"
-            action="/auth/login"
           >
             <span class="login100-form-title p-b-43">
               Login to continue
@@ -143,7 +140,7 @@
     <script src="vendor/countdowntime/countdowntime.js"></script>
 
     <script src="js/main.js"></script>
-    <!-- <script src="js/signIn.js"></script> -->
+    <script src="js/signIn.js"></script>
   </body>
 </html> 
 
